# onus

./: .gitignore  AGENTS.md  MANIFESTO.md  PHASE15E_DEDICATED_PROMPTS.md  SPEC.md  fresh_test.db  fresh_test.db-shm  fresh_test.db-wal  test_audit.db
onus/: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
onus/.github/workflows/: ci.yml
onus/apps/onus-console/: next.config.js  package-lock.json  package.json  tsconfig.json
onus/apps/onus-gateway/: .env.example  README.md  package.json
onus/apps/onus-site/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
onus/bindings/python/: README.md  pyproject.toml
onus/bindings/vscode/: .antigravity-test.js  .mocharc.js  .vscode-test.js  package-lock.json  package.json
onus/examples/: reality_demo.py
onus/install/: install-onus.ps1  install-onus.sh  install.ps1  install.sh  uninstall-onus.ps1  uninstall-onus.sh
onus/install/npx-package/: install.js  package.json
onus/reports/distribution/: CLEAN_MACHINE_ACCEPTANCE.md  REAL_FRONTEND_INVENTORY.md  RELEASE_PIPELINE.md  USER_JOURNEY_ACCEPTANCE.md  WEBSITE_DEPLOYMENT.md
onus/rules/: default.toml
onus/scripts/: deploy-gateway.ps1  deploy-gateway.sh  onus-shell-wrapper.sh
onus/site/: index.html
onus/src/: approval_broker.rs  authority.rs  config_env.rs  daemon.rs  handoff.rs  lease.rs  lib.rs  main.rs  memory.rs  prompt_intake.rs  quality.rs  rollback.rs  security.rs  semantic.rs  task_contract.rs  workspace.rs
onus/src/approval/: index.html  mod.rs
onus/src/audit/: db.rs  merkle.rs  mod.rs
onus/src/cli/: antigravity.rs  approvals.rs  authority.rs  claude_hook.rs  codex.rs  console.rs  contract.rs  cursor.rs  cursor_hook.rs  daemon_cmd.rs  dashboard.rs  doctor.rs  evaluate.rs  handoff.rs  intake.rs  lease_cli.rs  log_cmd.rs  mcp_proxy.rs  memory.rs  mod.rs  recovery.rs  restart.rs  rules.rs  (+11 more)
(+282 files in other folders)
