[package]
name = "onus"
version = "0.1.0"
edition = "2021"
description = "AI Agent Firewall — intercepts, evaluates, and blocks dangerous agent actions in real time"
license = "Apache-2.0"
repository = "https://github.com/onus-ai/onus"

[[bin]]
name = "onus"
path = "src/main.rs"

[lib]
name = "onus_core"
path = "src/lib.rs"

[dependencies]
# IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Policy engine
toml = "0.8"
regex = "1"

# Hash chaining
sha2 = "0.10"
hex = "0.4"

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Daemon / IPC
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# SQLite (Phase 2 — replace JSONL audit)
rusqlite = { version = "0.31", features = ["bundled"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "namedpipeapi", "winnt", "handleapi", "fileapi", "synchapi", "ioapiset"] }

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true
codegen-units = 1
strip = true
