[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "onus"
version = "0.1.0"
description = "Onus — AI Agent Firewall Python SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai-safety", "agent-firewall", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Gitlawb/onus"
